2010-10-09  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (GC_mach_thread): Move from
	darwin_stop_world.h.
	* include/private/darwin_stop_world.h (GC_mach_thread): Remove.
	* win32_threads.c (GC_start_world): Define "thread_id" local
	variable only if GC_ASSERTIONS; decide whether to resume a thread
	based on its "suspended" field value; assert that suspended thread
	stack_base is non-zero and the thread is not our one.

2010-10-08  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (GC_thread_resume): New inline function
	(move code from GC_thread_resume).
	* darwin_stop_world.c (GC_start_world): Check result of
	task_threads(); call GC_thread_resume().
	* os_dep.c (GC_malloc_heap_l, GC_is_malloc_heap_base): Define
	only if not CYGWIN32.
	* os_dep.c (GC_is_heap_base): Call GC_is_malloc_heap_base() only
	if not CYGWIN32.

2010-10-06  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (FindTopOfStack): Change return type to
	ptr_t (from long); make GC_INNER; add GC_ prefix.
	* darwin_stop_world.c (GC_push_all_stacks): Add thread_blocked
	local variable (initialized from the corresponding GC_thread
	field unless GC_query_task_threads); add assertion that our
	thread is not blocked; prefix FindTopOfStack with GC_ and remove
	no longer needed cast to ptr_t of the result; handle thread
	blocked case (and remove FIXME); use GC_push_all_stack_sections
	unless GC_query_task_threads (and remove FIXME).
	* pthread_support.c (GC_FindTopOfStack): Declare (if needed).
	* pthread_support.c (GC_do_blocking_inner): Call
	GC_save_regs_in_stack (if needed) before acquiring the lock.
	* win32_threads.c (GC_do_blocking_inner): Ditto.
	* pthread_support.c (GC_do_blocking_inner): Set/clear topOfStack
	field of GC_thread (Darwin only).
	* include/private/pthread_support.h (GC_thread): Add topOfStack
	field for Darwin (unless DARWIN_DONT_PARSE_STACK).

2010-10-05  Ivan Maidanski <ivmai@mail.ru>

	* finalize.c (GC_check_finalizer_nested): Change return type to